# buzznews

./: .env.example  .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  Design.md  PROGRESS.md  PROJECT_PLAN.md  README.md  alembic.ini  buzznews-final.html  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_pause_source.py  0003_article_search.py  0004_embedding_provider_budget.py  0005_llm_usage_details.py
deploy/: Caddyfile  backup.sh  remote-prune.sh  sudoers-buZz-news-worker
deploy/openclaw-skills/buzznews_backup_now/: SKILL.md  _meta.json
deploy/systemd/: buzz-news-backup.service  buzz-news-backup.timer  buzz-news-web.service  buzz-news-worker.service
scripts/: audit_cluster_noise.py  backfill_article_embeddings.py  backfill_openai_embeddings.py  db_backup.sh  make_favicon.py  recluster_pass.py  repick_images.py  rerender_articles.py  rewrite_articles.py  seed_sources.py
src/buzz_news/: __main__.py  alerts.py  buzz.py  cli.py  clusterer.py  config.py  db.py  embedder.py  embedding_budget.py  entities.py  fetcher.py  imager.py  llm_budget.py  llm_client.py  minhash.py  models.py  normalizer.py  openclaw_client.py  publisher.py  rollups.py  scheduler.py  scorer.py  search.py  verifier.py  writer.py
src/buzz_news/web/: app.py
tests/: conftest.py  test_buzz.py  test_cli.py  test_clusterer.py  test_embedder.py  test_entities.py  test_hn_adapter.py  test_imager.py  test_minhash.py  test_normalizer.py  test_publisher.py  test_reddit_adapter.py  test_rollups.py  test_rss_adapter.py  test_scorer.py  test_verifier.py  test_web.py  test_writer.py
(+40 files in other folders)
